--- a/ui/src/containers/Player/style.css
+++ b/ui/src/containers/Player/style.css
@@ -2,33 +2,51 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  background: #fff;
+  padding: 10px;
 }
 
 .demo1 {
-  height: 400px;
-  width: 400px;
   background: green;
   color: #fff;
 }
 
 .demo2 {
-  width: 400px;
   background: red;
   color: #fff;
 }
 
 .demo2 img {
-  width: 100%; 
+  width: 100%;
+  height: 100%;
 }
 
 .demo3 {
-  height: 400px;
-  width: 400px;
   background: blue;
   color: #fff;
 }
 
+.demo1,
+.demo2,
+.demo3,
 .echart-demo {
-  height: 400px;
-  width: 400px;
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  flex: 0 0 90%;
+  height: 100%;
+  border: 1px solid red;
+  overflow: auto;
+  position: relative;
+}
+
+.content {
+  transition: all ease-in .3s;
+  border: 1px solid #333;
+  height: 1280px;
+  width: 1440px;
+  transform-origin: 0 0;
 }
